--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "mysql2": "^3.10.1"
+    "mysql2": "^3.10.1",
+    "sequelize": "^6.37.3"
   }
 }
